# invite-agent

./: .env.example  .gitignore  README.md  TODO  backend.py  config.py  frontend.py  main.py  pyproject.toml
auth/: __init__.py  database.py  dependencies.py  models.py  security.py
invitation-agent/: agent.py  tools.py
invitation-agent/email-agent/: agent.py
invitation-agent/sub_agents/email-agent/: agent.py  tools.py
invitation-agent/sub_agents/email_agent/: agent.py  tools.py
invitation_agent/: agent.py  tools.py
invitation_agent/sub_agents/email_agent/: __init__.py  agent.py  tools.py
invitation_agent/sub_agents/whatsapp_agent/: __init__.py  agent.py
shared/: model.py
utils/: logger.py  utils.py
whatsapp-mcp/whatsapp-mcp-server/: main.py  whatsapp.py
